--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,29 @@
 
 # Go workspace file
 go.work
+
+
+/.pulumi/
+/.vscode/
+/.vs/
+bin/
+build/
+node_modules/
+*.pyc
+.Python
+venv/
+include/
+lib/
+yarn.lock
+package-lock.json
+Pulumi.*.yaml
+.idea/
+.ionide/
+*.iml
+key.rsa*
+obj/
+vendor
+Gopkg.lock
+**/.DS_Store
+
+**/ci-scripts
